# agentsmd-template-python

./: AGENTS.md  README.md  pyproject.toml
.docs/: 00-core-principles.md  README.md
.docs/01-coding-standards/: README.md  code-structure.md  docstring-guide.md  naming-conventions.md  type-aliases.md  type-annotations.md
.docs/02-workflow/: README.md  documentation-policy.md  git-workflow.md  mcp-usage.md  pr-workflow.md  tdd-ddd-workflow.md
.docs/03-domain-specific/: README.md
.docs/04-reference/: README.md  build-test.md  checklists.md  library-guides.md  security.md
